--- a/src/main/resources/templates/index/index.html
+++ b/src/main/resources/templates/index/index.html
@@ -137,106 +137,16 @@
 
 
             <div class="col-xl-6">
-                <div class="card">
-                    <div class="card-body">
-                        <div class="row">
-                            <div class="col-sm-4">
-                                <h4 class="card-title mb-0">Prestamos</h4>
-                                <div class="small text-muted">Mayo 2018</div>
-                            </div>
-                            <!--/.col-->
-                            <div class="col-sm-8 hidden-sm-down">
-                                <button type="button" class="btn btn-primary float-right bg-flat-color-1"><i class="fa fa-cloud-download"></i></button>
-                                <div class="btn-toolbar float-right" role="toolbar" aria-label="Toolbar with button groups">
-                                    <div class="btn-group mr-3" data-toggle="buttons" aria-label="First group">
-                                        <label class="btn btn-outline-secondary">
-                                            <input type="radio" name="options" id="option1"> Day
-                                        </label>
-                                        <label class="btn btn-outline-secondary active">
-                                            <input type="radio" name="options" id="option2" checked=""> Month
-                                        </label>
-                                        <label class="btn btn-outline-secondary">
-                                            <input type="radio" name="options" id="option3"> Year
-                                        </label>
-                                    </div>
-                                </div>
-                            </div><!--/.col-->
-
-
-                        </div><!--/.row-->
-                        <div class="chart-wrapper mt-4" >
-                            <canvas id="trafficChart" style="height:200px;" height="200"></canvas>
-                        </div>
-
-                    </div>
-                    <div class="card-footer">
-                        <ul>
-                            <li>
-                                <div class="text-muted">Visits</div>
-                                <strong>29.703 Users (40%)</strong>
-                                <div class="progress progress-xs mt-2" style="height: 5px;">
-                                    <div class="progress-bar bg-success" role="progressbar" style="width: 40%;" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
-                                </div>
-                            </li>
-                            <li class="hidden-sm-down">
-                                <div class="text-muted">Unique</div>
-                                <strong>24.093 Users (20%)</strong>
-                                <div class="progress progress-xs mt-2" style="height: 5px;">
-                                    <div class="progress-bar bg-info" role="progressbar" style="width: 20%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="text-muted">Pageviews</div>
-                                <strong>78.706 Views (60%)</strong>
-                                <div class="progress progress-xs mt-2" style="height: 5px;">
-                                    <div class="progress-bar bg-warning" role="progressbar" style="width: 60%;" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
-                                </div>
-                            </li>
-                            <li class="hidden-sm-down">
-                                <div class="text-muted">New Users</div>
-                                <strong>22.123 Users (80%)</strong>
-                                <div class="progress progress-xs mt-2" style="height: 5px;">
-                                    <div class="progress-bar bg-danger" role="progressbar" style="width: 80%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-                                </div>
-                            </li>
-                            <li class="hidden-sm-down">
-                                <div class="text-muted">Bounce Rate</div>
-                                <strong>40.15%</strong>
-                                <div class="progress progress-xs mt-2" style="height: 5px;">
-                                    <div class="progress-bar" role="progressbar" style="width: 40%;" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
+                <div id="grafic" style="min-width: 310px; height: 400px; margin: 0 auto">
+                    
+                    
                 </div>
             </div>
 
-            <div class="col-xl-3 col-lg-6">
-                <div class="card">
-                    <div class="card-body">
-                        <div class="stat-widget-one">
-                            <div class="stat-icon dib"><i class="ti-user text-primary border-primary"></i></div>
-                            <div class="stat-content dib">
-                                <div class="stat-text">Equipos asignados</div>
-                                <div class="stat-digit">260</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            
 
             <div class="col-xl-3 col-lg-6">
-                <div class="card">
-                    <div class="card-body">
-                        <div class="stat-widget-one">
-                            <div class="stat-icon dib"><i class="ti-layout-grid2 text-warning border-warning"></i></div>
-                            <div class="stat-content dib">
-                                <div class="stat-text">Equipos en prestamo</div>
-                                <div class="stat-digit">15</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                
             </div>
 
         </div> <!-- .content -->
@@ -244,37 +154,59 @@
 
     <!-- Right Panel -->
 
-    <script src="../../js/vendor/jquery-2.1.4.min.js"></script>
+    <script src="/js/vendor/jquery-2.1.4.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"></script>
-    <script src="../../js/plugins.js"></script>
-    <script src="../../js/main.js"></script>
+    <script src="/js/plugins.js"></script>
+    <script src="/js/main.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://code.highcharts.com/highcharts.js"></script>
+<script src="https://code.highcharts.com/modules/exporting.js"></script>
+<script src="https://code.highcharts.com/modules/export-data.js"></script>
 
+    <script th:src="@{/js/lib/chart-js/Chart.bundle.js}"></script>
+    <script th:src="@{/js/dashboard.js}"></script>
+    <script th:src="@{/js/widgets.js}"></script>
+    <script th:src="@{/js/lib/vector-map/jquery.vmap.js}"></script>
+    <script th:src="@{/js/lib/vector-map/jquery.vmap.min.js}"></script>
+    <script th:src="@{/js/lib/vector-map/jquery.vmap.sampledata.js}"></script>
+    <script th:src="@{/js/lib/vector-map/country/jquery.vmap.world.js}"></script>
+    <script th:inline="javascript">
 
-    <script src="../../js/lib/chart-js/Chart.bundle.js"></script>
-    <script src="../../js/dashboard.js"></script>
-    <script src="../../js/widgets.js"></script>
-    <script src="../../js/lib/vector-map/jquery.vmap.js"></script>
-    <script src="../../js/lib/vector-map/jquery.vmap.min.js"></script>
-    <script src="../../js/lib/vector-map/jquery.vmap.sampledata.js"></script>
-    <script src="../../js/lib/vector-map/country/jquery.vmap.world.js"></script>
-    <script>
-        ( function ( $ ) {
-            "use strict";
+var char; 
+document.addEventListener('DOMContentLoaded',function(){
+    alert("yonis");
+char = [(${grafic})];
+setTimeout(function(){refresGrafic();}, 5000);
+});
 
-            jQuery( '#vmap' ).vectorMap( {
-                map: 'world_en',
-                backgroundColor: null,
-                color: '#ffffff',
-                hoverOpacity: 0.7,
-                selectedColor: '#1de9b6',
-                enableZoom: true,
-                showTooltip: true,
-                values: sample_data,
-                scaleColors: [ '#1de9b6', '#03a9f5' ],
-                normalizeFunction: 'polynomial'
-            } );
-        } )( jQuery );
-    </script>
+function modificar(){
+    
+    char.series[0].setData([2,4,5],true);
+    
+}
+
+function refresGrafic(){
+    var prueba = {};
+$.ajax({
+    type: "POST",
+    contentType : 'application/json; charset=utf-8',
+    dataType : 'json',
+    url: "/equipo/grafic",
+    data: JSON.stringify(prueba), // Note it is important
+    success :function(result) {
+     
+     for (var i = 0; i < result.serie.length; i++) {
+         char.series[i].setData(result.serie[i].data,true);
+         
+    }
+    setTimeout(function(){refresGrafic();}, 3000);
+   }
+});
+    
+    
+} 
+		</script>
+    
 
 </body>
 </html>
